@@ -1,4 +1,4 @@
-$Id: README,v 1.5 2001-12-06 16:20:03 maire Exp $
+$Id: README,v 1.6 2002-06-06 17:23:21 maire Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -145,8 +145,25 @@ $Id: README,v 1.5 2001-12-06 16:20:03 maire Exp $
         9.   z distribution of the secondary charged vertices (mm)
        10.   kinetic energy of the photons escaping the absorber (MeV)
 
- Note that, histograms are disabled via the flag G4NOHIST in the GNUmakefile.
- Currently, histograms in this example are implemented through the obsolete
- CLHEP/Hist package, which is no longer supported. The implementation will
- be replaced by direct call to the "analysis" module in a near future.
+     Note that histograms are disabled via the flag G4NOHIST in GNUmakefile.
+     
+8- Using the Anaphe implementation of the AIDA 2.2 histograms:
+ --------------------------------------------------------------
+
+    In order to use the Anaphe implementation of the AIDA 2.2 interfaces, 
+    prepare some environment variables by source-ing one of the following 
+    startup scripts (depending on your compiler version):
+
+    # gcc-2.95.2
+    source $LHCXXTOP/share/LHCXX/4.0.1/install/sharedstart.sh or .csh
+
+    # egcs_1.1.2 (aka gcc 2.91.66)
+    source $LHCXXTOP/share/LHCXX/4.0.1-sec/install/sharedstart.sh or .csh
+
+    At CERN, $LHCXXTOP is /afs/cern.ch/sw/lhcxx, you may want to use a
+    more recent release, check http:/cern.ch/anaphe for more information.
+
+    After this, you will have access to the 'aida-config' command which
+    is used in the GNUmakefile.
+
 
