@@ -1,4 +1,4 @@
-$Id: History,v 1.16 2002-03-08 17:30:17 maire Exp $
+$Id: History,v 1.17 2002-06-06 17:23:21 maire Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -14,6 +14,9 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+     
+06-06-02 mma (testem5-V04-00-03)
+-old histograming package clhep/hist replaced by AIDA 2.2/anaphe. See README
      
 08-03-02 mma (testem5-V04-00-01)
 - PhysicsList: uniformisation of the setG(E)Cut commands
